fix transactionList overflow

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -26,7 +26,6 @@ button {
 
 main {
   display: flex;
-  height: 100vh;
   width: 100vw;
 }
 
