--- a/styles/components/Transactions/TransactionList.scss
+++ b/styles/components/Transactions/TransactionList.scss
@@ -2,4 +2,6 @@
   margin-top: 18px;
   width: 100%;
   gap: 18px;
+  max-height: 300px;
+  overflow-y: auto;
 }
